# FastQt

./: .appveyor.yml  .coveralls.yml  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CREDITS  FastQt.pro  README.md  abstractanalysewidget.cpp  abstractanalysewidget.h  abstractsequencereader.cpp  abstractsequencereader.h  analysis.cpp  analysisrunner.h  fastqc_fr.ts  fastqprocess.cpp  fastqprocess.h  fastqreader.cpp  fastqreader.h  fastqt.desktop  fastqt.pro  innosetup.iss  main.cpp  mainanalysewidget.cpp  mainanalysewidget.h  mainwindow.cpp  mainwindow.h  resources.qrc  seqqualityanalysewidget.cpp  seqqualityanalysewidget.h  sequence.cpp  sequence.h  statanalysewidget.cpp  statanalysewidget.h
QFontIcon/: qfonticon.cpp  qfonticon.h
analysis/: PerBase3DAnalysis.cpp  PerBase3DAnalysis.h  analysis.cpp  analysis.h  analysis.pri  analysisrunner.cpp  analysisrunner.h  basegroup.cpp  basegroup.h  basicstatsanalysis.cpp  basicstatsanalysis.h  lengthdistributionanalysis.cpp  lengthdistributionanalysis.h  overrepresentedseqsanalysis.cpp  overrepresentedseqsanalysis.h  perbasecontentanalysis.cpp  perbasecontentanalysis.h  perbasencontentanalysis.cpp  perbasencontentanalysis.h  perbasequalityanalysis.cpp  perbasequalityanalysis.h  persequencegccontent.cpp  persequencegccontent.h  persequencequalityanalysis.cpp  persequencequalityanalysis.h
app/: AUTHORS  CREDITS  app.pro  fastqt.desktop  mainwindow.cpp  myapp.rc  resources.qrc
app/QFontIcon/: qfonticon.cpp
app/analysis/: analysisrunner.h  basicstatsanalysis.cpp  lengthdistributionanalysis.cpp  overrepresentedseqsanalysis.cpp  perbasecontentanalysis.cpp  perbasecontentanalysis.h  perbasencontentanalysis.cpp  perbasencontentanalysis.h  persequencequalityanalysis.cpp
app/cli/: cli.pri  cliparser.h
app/model/: keyvaluemodel.h  mainanalysemodel.cpp  model.pri
app/sequence/: abstractsequencereader.h  sequence.h  sequence.pri
app/ui/: mainanalysewidget.h  ui.pri
app/utils/: imageformatdefinition.h
cli/: cliparser.cpp  cliparser.h  maincli.cpp  maincli.h
cmake/: ECMFindModuleHelpersStub.cmake
dist_package/: CHANGELOG_DEB.in  CHANGELOG_RPM.in  CPackConfig.cmake  CPackProjectConfig.txt
docs/: test.txt
icons/: icons.qrc
karchive/: karchive.cmake
model/: keyvaluemodel.cpp  keyvaluemodel.h  mainanalysemodel.cpp  mainanalysemodel.h  model.pri
sequence/: abstractsequencereader.cpp  abstractsequencereader.h  bamreader.cpp  bamreader.h  fastqreader.cpp  fastqreader.h  phredencoding.cpp  phredencoding.h  sequence.cpp  sequence.h  sequence.hxx  sequence.pri
test/: test.pro  tst_fastqtest.cpp
translations/: fastqc_fr.qm  fastqc_fr.ts
ui/: aboutdialog.cpp  aboutdialog.h  mainanalyseview.cpp  mainanalyseview.h  mainanalysewidget.cpp  mainanalysewidget.h  mainwindow.cpp  mainwindow.h  ui.pri
utils/: basegroup.cpp  basegroup.h  format_detection.cpp  format_detection.h  progressbar.cpp  progressbar.h  quagzipfile.h  statistic.h  utils.pri
win32/: innosetup.iss
win32/KArchive/include/KF5/: karchive_version.h
win32/KArchive/include/KF5/KArchive/: karchive_export.h  kfilterdev.h
win32/KArchive/lib/cmake/KF5Archive/: KF5ArchiveConfig.cmake  KF5ArchiveConfigVersion.cmake  KF5ArchiveTargets-release.cmake
win32/KArchive/mkspecs/modules/: qt_KArchive.pri
